changed project namespace